--- a/css/pricing.css
+++ b/css/pricing.css
@@ -16,6 +16,7 @@
     --logo-img: url('../imgs/logo-dark.svg');
     --bg-img1: url('../imgs/Bg-dark.svg');
     --bg-img2: url('../imgs/bg-dark2.svg');
+    --bg-color3: #22343d;
 
 }
 
@@ -29,6 +30,7 @@
     --bg-img1: url('../imgs/Bg-img.svg');
     --bg-img2: url('../imgs/bg-img2.svg');
     --mont-family:  'Montserrat', sans-serif;
+    --bg-color3:  linear-gradient(180deg, #F7F7F7 0%, rgba(247, 247, 247, 0) 100%);
 }
 
 body {
@@ -56,6 +58,23 @@ a {
 .grow {
     flex-grow: 1;
 }
+
+.title {
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 60px;
+    text-align: center;
+    color: var(--text-color);
+}
+
+.text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: var(--text-color);
+}
+
+/* Header */
 
 #hero {
     background-color: var(--bg-color);
@@ -171,462 +190,11 @@ a {
 }
 
 
-.hero__content {
-    padding-top: 25px;
-}
-
-.hero__row {
-    display: flex;
-}
-
-.hero__desc {
-    padding-top: 120px;
-    display: flex;
-    flex-direction: column;
-}
-.hero__title {
-    width: 460px;
-    font-weight: bold;
-    font-size: 40px;
-    line-height: 60px;
-    color: var(--text-color);
-    margin-bottom: 18px;
-}
-.hero__text {
-    width: 458px;
-    font-size: 18px;
-    line-height: 28px;
-    color: var(--text-color);
-    margin-bottom: 45px;
-}
-.hero__btns {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.hero__btn-link {
-    padding: 15px 41px;
-    background-color: var(--primary-color);
-    color: #fff;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 24px;
-    border-radius: 4px;
-}
-.hero__btn-play {
-    color: var(--primary-color);
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    margin: 0 auto;
-    margin-left: 30px;
-    text-decoration-line: underline;
-}
-
-
-.hero__btn-link:hover {
-    box-shadow: inset 0px 7px 40px 7px #03d6bf;
-}
-.sign-up:hover {
-    box-shadow: inset 0px 7px 40px 7px #03d6bf;
-}
-
-
-
-.bx-play {
-    color: var(--primary-color);
-    font-size: 25px;
-    position: relative;
-    top: 5px;
-}
-
-.hero__img {
-    width: 600px;
-    height: 555px;
-    object-fit: cover;
-}
-
-
-
-/* BUILD */
-
-
-
-.build {
-    padding: 140px 0 90px 0;
-    background-image: var(--bg-img1);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center bottom;
-}
-
-.build__headingbox {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.build__title {
-    width: 539px;
-    font-weight: bold;
-    font-size: 32px;
-    line-height: 48px;
-    text-align: center;
-    color: var(--text-color);
-    margin-bottom: 66px;
-}
-.build__list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 34px;
-
-}
-
-.build__item {
-    width: 240px;
-}
-
-.bld__img {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 30px;
-}
-.bld__title {
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 33px;
-    color: var(--text-color);
-    margin-bottom: 13px;
-}
-.bld__text {
-    font-size: 16px;
-    line-height: 26px;
-    color: var(--text-color);
-}
-
-.build__btn-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.build__btn {
-    padding: 15px 33px;
-    background-color: var(--primary-color);
-    border-radius: 4px;
-    color: #fff;
-    text-transform: uppercase;
-}
-
-
-/* MANAGMENT */
-
-.managment{
-    padding: 150px 0 90px 0;
-}
-
-.managment__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.managment__span {
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    color: var(--text-color);
-    margin-bottom: 8px;
-}
-.managment__title {
-    font-weight: bold;
-    font-size: 32px;
-    line-height: 48px;
-    color: var(--text-color);
-    margin-bottom: 23px;
-}
-.managment__text {
-    font-size: 16px;
-    line-height: 26px;
-    color: var(--text-color);
-    margin-bottom: 30px;
-}
-
-.mng__title {
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 26px;
-    color: var(--text-color);
-    margin-bottom: 12px;
-}
-.mng__text {
-    width: 486px;
-    font-size: 16px;
-    line-height: 26px;
-    color: var(--text-color);
-    margin-bottom: 25px;
-}
-
-.managment__img {
-    width: 540px;
-    height: 473px;
-    object-fit: cover;
-}
-
-
-/* SUPPORT */
-
-.support__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 75px 0; 
-}
-
-.support__img {
-    width: 543px;
-    height: 500px;
-    object-fit: cover;
-}
-.support__info {
-    margin-left: 90px;
-}
-.support__span {
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    color: var(--text-color);
-    margin-bottom: 8px;
-}
-.support__title {
-    font-weight: bold;
-    font-size: 32px;
-    line-height: 48px;
-    color: var(--text-color);
-    margin-bottom: 23px;
-}
-.support__text {
-    font-size: 16px;
-    line-height: 26px;
-    color: var(--text-color);
-    margin-bottom: 30px;
-}
-
-.support__item {
-    margin-bottom: 30px;
-    display: flex;
-    align-items: center;
-}
-
-.sprt__img {
-    width: 35px;
-    height: 35px;
-    margin-right: 30px;
-}
-
-.sprt__text {
-    font-size: 16px;
-    line-height: 26px;
-    color: var(--text-color);
-    width: 365px;
-}
-
-
-/*  EASY LIST */
-
-.easy {
-    padding: 53px 0 75px 0;
-    background-image: var(--bg-img2);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top center;
-}
-
-.easy__desc {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.easy__title {
-    font-weight: bold;
-    font-size: 32px;
-    line-height: 48px;
-    text-align: center;
-    color: var(--text-color);
-    margin-bottom: 16px;
-}
-.easy__text {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    text-align: center;
-    color: var(--text-color);
-    margin-bottom: 32px;
-    width: 542px;
-}
-.easy__lists {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.process__list {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 48px;
-}
-.process__item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 16px;
-}
-
-.process__img {
-    width: 98px;
-    height: 98px;
-}
-.process__text {
-    padding: 15px 24px;
-    background-color: #fff;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    color: #000;
-    box-shadow: 0px 2px 8px rgba(86, 117, 146, 0.1);
-    border-radius: 35px;
-}
-
-.process__item:nth-child(1) .process__text {
-    margin-left: 16px;
-    margin-right: 16px;
-}
-.process__item:nth-child(2) .process__text {
-    margin-right: 16px;
-    margin-left: 16px;
-}
-
-
-.easy__btn-box {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.easy__btn {
-    padding: 15px 30px;
-    background-color: var(--primary-color);
-    color: #fff;
-    border-radius: 4px;
-     
-}
-
-
-/* STRATEGIES */
-
-.strategies {
-    padding: 75px 0;
-}
-
-
-.title {
-    font-weight: bold;
-    font-size: 34px;
-    line-height: 51px;
-    color: var(--text-color);
-}
-
-.strategies__title {
-    margin-bottom: 8px;
-}
-
-.text {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    color: var(--text-color);
-}
-
-.strategies__text {
-    margin-bottom: 33px;
-}
-.strategies__list {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 64px;
-   
-}
-.strategies__item {
-    width: 348px;
-    border: 1px solid var(--bg-color2);
-    border-radius: 8px;
-    background-color: #fff;
-}
-
-.strs__img {
-    width: 348px;
-    height: 185px;
-}
-.strs__info {
-    padding: 24px 30px 40px 24px;
-}
-.strs__span {
-    font-size: 16px;
-    line-height: 28px;
-    color: #22343d;
-    margin-bottom: 12px;
-}
-.strs__link {
-    font-weight: bold;
-    color: #22343d;
-    cursor: pointer;
-}
-.strs__title {
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 40px;
-    color: #22343d;
-}
-
-.strs__title:hover {
-    color: var(--primary-color);
-    cursor: pointer;
-}
-
-.strategies__round {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style-type: none;
-}
-
-.round__item {
-    margin-right: 10px;
-}
-
-.round__item:nth-child(2) .round__btn{
-    background-color: var(--primary-color);
-}
-
-.round__btn {
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background-color: #efefef;
-    border: none;
-    cursor: pointer;
-}
-
-.round__btn:hover {
-    background-color: var(--primary-color);
-}
 
 /* PRICE */
 
 .price {
-    padding: 75px 0;
+    padding: 50px 0 150px 0;
 }
 
 .price__desc {
@@ -635,8 +203,23 @@ a {
     align-items: center;
     justify-content: center;
 }
+
+.price__span {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    color: var(--text-color);
+    margin-bottom: 32px;
+    text-transform: uppercase;
+}
+
 .price__title {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 60px;
+    text-align: center;
+    color: var(--text-color);
 }
 .price__text {
     margin-bottom: 50px;
@@ -755,80 +338,110 @@ a {
     margin-bottom: 32px;
 }
 
+/* ENTERPIRICE */
 
-/*             CLIENTS        */
-
-.clients {
-    padding: 75px 0;
+.enter {
+    padding: 52px 0;
+    background: var(--bg-color3);
 }
 
-.clients__desc {
+.enter__page {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.clients__title {
+
+.enter__span {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    color: var(--text-color);
+    margin-bottom: 16px;
+}
+.enter__title {
     margin-bottom: 8px;
 }
-.clients__text {
-    margin-bottom: 50px;
-    width: 537px;
-    text-align: center;
+
+.enter__text {
+    margin-bottom: 32px;
 }
-.clients__list {
+
+.enter__btn {
+    padding: 11px 18px;
+    background-color: var(--primary-color);
+    color: #fff;
+    border-radius: 4px;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+}
+
+
+/*  EFFECTS   */
+
+
+.effects {
+    padding: 150px 0 75px 0;
+
+}
+.effects__title-box {
+    margin: 0 auto;
+
+}
+.effects__title {
+    margin-bottom: 55px;
+}
+.effects__page {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.clients__item {
-    width: 327px;
-    height: 236px;
-    background-color: #fff;
-    border: 1px solid #dedede;
-    box-sizing: border-box;
-    border-radius: 5px;
-    padding: 16px 16px 24px 24px;
+
+.effects__bigimg {
+    width: 528px;
+    height: 392px;
+    object-fit: cover;
 }
 
-.say__img {
-    width: 106px;
-    height: 18px;
-    margin-bottom: 16px;
+.effects__desc {
+    width: 543px;
 }
-.say__text {
-    font-size: 16px;
-    line-height: 28px;
-    letter-spacing: 0.2px;
-    color: #737373;
-    margin-bottom: 16px;
-}
-.say__innerbox {
-    display: flex;
-    align-items: center;
-}
-.say__inner-img {
-    width: 50px;
-    height: 50px;
-}
-.say__box-job {
-    margin-left: 14px;
-}
-.say__name {
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.2px;
-    color: var(--primary-color);
+
+.effects__item {
+    margin-bottom:  32px;
     
 }
-.say__job {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.2px;
-    color: #252B42;
+.effects__name {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
 }
+
+.effects__img {
+    width: 50px;
+    height: 50px;
+    margin-right: 14px;
+}
+
+.effects__title-job {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: var(--text-color);
+}
+
+.effects__text {
+    font-size: 16px;
+    line-height: 28px;
+    display: flex;
+    align-items: center;
+    color: var(--text-color);
+}
+
+
+/* background: linear-gradient(180deg, #F7F7F7 0%, rgba(247, 247, 247, 0) 100%); */
 
 
 /* ACIDE */
@@ -875,7 +488,10 @@ a {
     object-fit: cover;
 }
 
-/* FOOTER */
+
+/* footer */
+
+
 
 .footer {
     padding: 75px 0 50px 0;
@@ -995,6 +611,8 @@ a {
     display: flex;
     justify-content: center;
 }
+
+
 
 @media screen and (max-width: 900px){
     .container {
@@ -1354,6 +972,9 @@ a {
 
 }
 
+
+
+
 @media screen and (max-width: 768px){
 
     
@@ -1368,87 +989,12 @@ a {
     }
 
 
-     /* HERO PART */
-
-
-    .hero__desc {
-        align-items: center;
-    }
-
-    .hero__title {
-        width: 95%;
-        margin-bottom: 18px;
-        font-size: 36px;
-        text-align: center;
-    }
-
-    .hero__text {
-        width: 95%;
-        text-align: center;
-    }
-
-    .hero__btns {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .hero__btn-play {
-        margin-left: 0;
-        margin-top: 16px;
-    }
-
-    /* .build__item{
-        width: calc(50% - 30px);
-    } */
-
-    .mng__text {
-        width: 100%;
-    }
-
-    /* BUILD */
-
-    .build__list {
-        flex-flow: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-
-    .build__item {
-        width: 240px;
-        margin-bottom: 24px;
-    }
-
-    .bld__img {
-        margin-bottom: 10px;
-    }
-
-    .process__img {
-        width: 100%;
-    }
-
-    .easy__title {
-        font-size: 32px;
-    }
-
-    .process__text {
-        margin: 0;
-        padding: 8px 25px;
-        width: 100%;
-        font-weight: 500;
-        font-size: 13px;
-        line-height: 20px;
-        color: #2f281e;
-    }
-
-
-
     .price__item {
         width: 90%;
         height: 100%;
     }
-
 }
+
 
 .show {
     opacity: 1;
