--- a/css/main.css
+++ b/css/main.css
@@ -107,11 +107,17 @@ a {
     color: var(--text-color);
 }
 
+.nav__link:hover {
+    border-bottom: 3px solid var(--primary-color);
+    color: var(--primary-color);
+}
+
+
 .nav__btns {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between;;
 }
 
 .header__btn {
@@ -121,7 +127,14 @@ a {
     border-radius: 6px;
 }
 .sign-in {
-    color: var(--btn-color);
+    color: #173A56;
+}
+
+.sign-in:hover {
+    color: #fff;
+    background-color: var(--primary-color);
+    box-shadow: inset 0px 7px 40px 7px #03d6bf;
+    border-color: transparent;
 }
 
 .sign-up {
